# bimanual_mocap

./: README.md  watch_phone_pocket.py  watch_phone_pocket_unity.py
arm-pose-estimation/example_scripts/stream/: watch_only.py
arm-pose-estimation/src/wear_mocap_ape/: config.py
arm-pose-estimation/src/wear_mocap_ape/data_types/: bone_map.py
arm-pose-estimation/src/wear_mocap_ape/estimate/: estimate_joints.py  estimator.py  watch_phone_pocket_kalman.py  watch_phone_uarm.py  watch_phone_uarm_nn.py
bimanual_ws/: frames_2025-08-24_11.43.33.gv  frames_2025-08-24_11.44.25.gv  frames_2025-08-24_11.56.55.gv
bimanual_ws/install/: local_setup.sh  setup.sh
bimanual_ws/log/: latest_build
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_bringup/: package.xml  setup.cfg  setup.py
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_bringup/bimanualrobot_bringup/: hardware_checker.py  hardware_checker_ping.py  joint_state_checker.py  joint_trajectory_executor.py
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_bringup/config/: hardware_controller_manager.yaml  hardware_controller_manager_old.yaml  initial_positions.yaml  test.yaml
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_bringup/launch/: bimanualrobot.launch.py  check_connection.launch.py  hardware_check.launch.py
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_bringup/scripts/: bimanual_robot_connect_and_moveit.sh  bimanual_robot_drumsticks_gazebo_and_moveit.sh  bimanual_robot_gazebo.sh  bimanual_robot_gazebo_and_moveit.sh
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_bringup/scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_bringup/scripts/log/: latest_build
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_description/: CMakeLists.txt
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_drumstick_moveit_config/: .setup_assistant  CMakeLists.txt
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_drumstick_moveit_config/config/: bimanualrobot.ros2_control.xacro  bimanualrobot.urdf.xacro  move_group.rviz  ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml  planning_pipeline.yaml
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_drumstick_moveit_config/config/bimanualrobot/: bimanualrobot.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_drumstick_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_drumstick_moveit_config/scripts/: spawn_drum.py
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_gazebo/: CMakeLists.txt  package.xml
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_moveit_config/: .setup_assistant  CMakeLists.txt
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_system_tests/: CMakeLists.txt
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_system_tests/scripts/: arm_loop_controller.py  dmp.py  move_bimanual_drumsticks.py  move_left_arm_basic.py  move_right_arm.py  move_right_arm2.2.py  move_right_arm2.2elb.py  move_right_arm2.2elb_pick.py  move_right_arm2.2elb_traj.py  move_right_arm2.2elb_traj_copy.py  move_right_arm2.py  move_right_arm_base.py  move_right_arm_basic.py  move_right_arm_fast.py  move_right_arm_fast_dmp.py  move_right_arm_fast_hz.py  move_right_arm_fast_record.py  move_right_arm_fast_wrist.py  move_right_arm_horizon.py  move_right_arm_pin.py  move_right_arm_pin_follow.py  move_right_arm_pred.py  move_right_arm_pred_csv.py  move_right_arm_record.py  move_right_arm_wrist.py  servo_udp_bridge.py  udping.py
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_system_tests/scripts/logs/: baseline.npz  wrist_20251020_031909_recon.npz  wrist_20251020_031909_weights.npz  wrist_20251020_041138_recon.npz  wrist_20251020_041138_weights.npz
bimanual_ws/src/bimanualrobot_ros2/bimanualrobot_system_tests/scripts/logs/dmp/: wrist_20251020_031909.txt  wrist_20251020_041138.txt
bimanual_ws/src/dynamixel_hardware_interface/: CHANGELOG.rst
(+635 files in other folders)
