cmake_minimum_required(VERSION 3.22)
project(bimanualrobot_drumstick_moveit_config)

find_package(ament_cmake REQUIRED)

ament_package()

if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/launch")
  install(
    DIRECTORY launch
    DESTINATION share/${PROJECT_NAME}
    PATTERN "setup_assistant.launch" EXCLUDE)
endif()


install(DIRECTORY 
  config scripts 
  DESTINATION share/${PROJECT_NAME}
  )
install(PROGRAMS 
  scripts/spawn_drum.py
  DESTINATION lib/${PROJECT_NAME}/
  )
install(FILES .setup_assistant DESTINATION share/${PROJECT_NAME})

